<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileAdmin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:src="@drawable/person1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="110dp"
                    android:backgroundTint="@color/yellow"
                    android:contentDescription="@string/add_profile"
                    android:src="@drawable/baseline_add_a_photo_24"
                    app:layout_anchor="@id/image_view"
                    app:layout_anchorGravity="bottom|right" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_call_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/phone_no"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_room_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/yellow"
                android:hint="@string/update"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>